--- a/Goringetal_NonAnalogueAssemblages.Rmd
+++ b/Goringetal_NonAnalogueAssemblages.Rmd
@@ -2,11 +2,11 @@
 title: "No analogue paper"
 author: "Simon Goring *et al*."
 date: "`r format(Sys.time(), '%d %B, %Y')`"
-output:
+output: word_document
 pdf_document:
 pandoc_args: "-H margins.sty"
-bibliography: non_anlogue.bib
-csl: harvard1.csl
+bibliography: non_analogue.bib
+#csl: harvard1.csl
 ---
 
 No-Analogues in North American Pollen Space
@@ -47,13 +47,13 @@ ggplot(data, aes(x = x, y = y)) +
   scale_x_continuous(expand = c(0,0), limits = c(0,1)) +
   scale_y_continuous(expand=c(0,0), limits = c(0,1)) +
   annotate('text', x = 0.15, y = 0.1, label = 'Community\nPersistence', 
-           family = 'serif', size = 6, face = 'bold') +
+           family = 'serif', size = 6, fontface = 'bold') +
   annotate('text', x = 0.85, y = 0.9, label = 'Ecological\nNovelty', 
-           family = 'serif', size = 6, face = 'bold') +
+           family = 'serif', size = 6, fontface = 'bold') +
   annotate('text', x = 0.15, y = 0.9, label = 'Transient\nRefugium',
-           family = 'serif', size = 6, face = 'bold') +
+           family = 'serif', size = 6, fontface = 'bold') +
   annotate('text', x = 0.85, y = 0.1, label = 'Community\nMigration', 
-           family = 'serif', size = 6, face = 'bold') +
+           family = 'serif', size = 6, fontface = 'bold') +
   xlab('Site Turnover') + ylab('Landscape Turnover') +
   theme(axis.title.x = element_text(family = 'serif', 
                                     face = 'bold.italic', size = 18),
@@ -120,7 +120,7 @@ points <- ggplot(data = data.frame(map), aes(long, lat)) + geom_path(aes(group=g
   coord_map(xlim=c(-100, -45), ylim=c(21, 65)) + theme_bw() + scale_x_continuous(expand = c(0,0))
 
 bins <- ggplot(compiled.pollen) + 
-          geom_bar(aes(x = age), 
+          geom_histogram(aes(x = age), 
                    breaks = seq(-100, 22000, by = 500), 
                    fill='gray', color='black') +
           scale_x_continuous(expand=c(0, 0), limits=c(-100, 21000)) +
@@ -203,7 +203,8 @@ pol.mod <- lm(self ~ land,
 clim.mod <- lm(self ~ land, 
                 data = na.omit(subset(full.plot, value == 'Climate')))
 
-save('data/output/pollen.site.table.csv')
+# not sure what should be saved here, but doesn't 
+# save('data/output/pollen.site.table.csv')
 
 ```
 
