Started re-formatting references.  Mostly in the introduction & importing bibtex references to the `bib` file.
Major edits to the `load_datasets` code. Put it all into a function so we don't mess up the `globalenv`, wrote out all files to `rds` now.  This may mess up the `blois.check`, but I'll edit as neccessary.

Re-ran `load_datasets` once the code was cleaned up.  We now have 11000 of ~50000 total, for North America (note we're only using the eastern portion).

More changes related to the ESA talk.  Will commit those as needed.

--- a/neotoma_bib.bib
+++ b/neotoma_bib.bib
@@ -194,6 +194,28 @@
   Publisher                = {Elsevier}
 }
 
+@article{shuman2005magnitudes,
+  title={The magnitudes of millennial-and orbital-scale climatic change in eastern North America during the Late Quaternary},
+  author={Shuman, Bryan and Bartlein, Patrick J and Webb, Thompson},
+  journal={Quaternary Science Reviews},
+  volume={24},
+  number={20},
+  pages={2194--2206},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{gill2009pleistocene,
+  title={Pleistocene megafaunal collapse, novel plant communities, and enhanced fire regimes in North America},
+  author={Gill, Jacquelyn L and Williams, John W and Jackson, Stephen T and Lininger, Katherine B and Robinson, Guy S},
+  journal={Science},
+  volume={326},
+  number={5956},
+  pages={1100--1103},
+  year={2009},
+  publisher={American Association for the Advancement of Science}
+}
+
 @Article{gill2013linking,
   Title                    = {Linking abundances of the dung fungus {Sporormiella} to the density of bison: implications for assessing grazing by megaherbivores in palaeorecords},
   Author                   = {Gill, Jacquelyn L and McLauchlan, Kendra K and Skibbe, Adam M and Goring, Simon and Zirbel, Chad R and Williams, John W},
@@ -255,6 +277,16 @@
   Year                     = {1988}
 }
 
+@article{jackson2012representation,
+  title={Representation of flora and vegetation in Quaternary fossil assemblages: known and unknown knowns and unknowns},
+  author={Jackson, Stephen T},
+  journal={Quaternary Science Reviews},
+  volume={49},
+  pages={1--15},
+  year={2012},
+  publisher={Elsevier}
+}
+
 @Manual{rioja2013,
   Title                    = {rioja: Analysis of {Quaternary} Science Data},
   Author                   = {Steve Juggins},
@@ -272,6 +304,56 @@
   Year                     = {2013},
 
   Url                      = {http://CRAN.R-project.org/package=ggmap}
+}
+
+@article{kujawa2016pollen,
+  title = {The effect of anthropogenic land cover change on pollen-vegetation relationships in the American Midwest},
+  author = {Kujawa, E and Goring, SJ and Dawson, A and Calcote, R and Grimm, EC and Hotchkiss, SC and Jackson, ST and Lynch, EA and McLachlan, J and St-Jacques, J-M and Umbanhowar, C, Jr. and Williams, JW}
+  year = {accepted},
+  journal = {Anthropocene}
+}
+
+
+@article{hotchkiss2007response,
+  title={Response of vegetation and fire to Little Ice Age climate change: regional continuity and landscape heterogeneity},
+  author={Hotchkiss, Sara C and Calcote, Randy and Lynch, Elizabeth A},
+  journal={Landscape Ecology},
+  volume={22},
+  number={1},
+  pages={25--41},
+  year={2007},
+  publisher={Springer}
+}
+
+@article{davis1991detecting,
+  title={Detecting a species limit from pollen in sediments},
+  author={Davis, Margaret B and Schwartz, Mark W and Woods, Kerry},
+  journal={Journal of Biogeography},
+  pages={653--668},
+  year={1991},
+  publisher={JSTOR}
+}
+
+@article{jacobson1981selection,
+  title={The selection of sites for paleovegetational studies},
+  author={Jacobson, George L and Bradshaw, Richard HW},
+  journal={Quaternary research},
+  volume={16},
+  number={1},
+  pages={80--96},
+  year={1981},
+  publisher={Elsevier}
+}
+
+@article{grimm1984fire,
+  title={Fire and Other Factors Controlling the Big Woods Vegetation of Minnesota in the Mid-Nineteenth Century},
+  author={Grimm, Eric C},
+  journal={Ecological Monographs},
+  volume={54},
+  number={3},
+  pages={291--311},
+  year={1984},
+  publisher={Wiley Online Library}
 }
 
 @Article{macdonald1991post,
@@ -308,6 +390,17 @@
 
   Doi                      = {10.1139/b73-271},
   Publisher                = {NRC Research Press}
+}
+
+@article{overpeck1985quantitative,
+  title={Quantitative interpretation of fossil pollen spectra: dissimilarity coefficients and the method of modern analogs},
+  author={Overpeck, JT and Webb, TIII and Prentice, IC},
+  journal={Quaternary Research},
+  volume={23},
+  number={1},
+  pages={87--108},
+  year={1985},
+  publisher={Elsevier}
 }
 
 @Manual{bchron2014,
@@ -522,6 +615,28 @@ estimation, and non-parametric phase modelling},
   Volume                   = {21},
 
   Url                      = {http://www.jstatsoft.org/v21/i12/}
+}
+
+@article{williams2007novel,
+  title={Novel climates, no-analog communities, and ecological surprises},
+  author={Williams, John W and Jackson, Stephen T},
+  journal={Frontiers in Ecology and the Environment},
+  volume={5},
+  number={9},
+  pages={475--482},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+
+@article{williams2001dissimilarity,
+  title={Dissimilarity analyses of late-Quaternary vegetation and climate in eastern North America},
+  author={Williams, John W and Shuman, Bryan N and Webb, Thompson},
+  journal={Ecology},
+  volume={82},
+  number={12},
+  pages={3346--3362},
+  year={2001},
+  publisher={Wiley Online Library}
 }
 
 @Article{williams2008obtaining,
