--- a/Goringetal_NonAnalogueAssemblages.Rmd
+++ b/Goringetal_NonAnalogueAssemblages.Rmd
@@ -21,13 +21,13 @@ Abstract
 
 Introduction
 ------------------------
-Investigation of non-analogue vegetation, both in the past and in the future are tied to differences from modern conditions (Williams and Jackson, 2007; Gill et al.).  A major concern with no-analogue climate in the future (ref) is the development of communities for which we have no modern analogues as tree species respond individualistically to changing climatic conditions. Non-analogue conditions provide a challenge for ecologists, land managers and conservationists, tied to our lack of understanding, both in how the process of change will unfold, and in how ecosystem services are provided by these vegetation communities for which we have no analogue.
+Investigation of non-analogue vegetation, both in the past and in the future are largely tied to differences from modern conditions [@williams2007novel;@gill2009pleistocene].  A major concern with novel climate in the future is the development of communities for which we have no modern analogues as tree species respond individualistically to changing climatic conditions. Novel conditions, with no modern analogue provide a challenge for ecologists, land managers and conservationists, tied to our lack of understanding, both in how the process of change will unfold, and in how ecosystem services are provided by these vegetation communities for which we have no analogue.
 
-Estimates of dissimilarity and turnover in paleoecological records have been used to give us an indication of the novelty of ecosystems with respect to modern vegetation, or to provide information about how much change occurs through time within a record (Williams et al., 2001), often relating these changes to climate.  The challenge in this case is that, as with modern ecosystems, changes in pollen composition at one location may represent points along a successional trajectory, where each time point represents significant compositional turnover, but, relative to the surrounding, heterogeneous landscape, very little change in forest composition occurs.  Thus turnover as a single metric can provide results that are not uniquely tied to overall, landscape scale, changes in vegetation.
+Estimates of dissimilarity and turnover in paleoecological records have been used to give us an indication of the novelty of ecosystems with respect to modern vegetation, or to provide information about how much change occurs through time within a record [@williams2001dissimilarity], often relating these changes to climate.  The challenge in this case is that, as with modern ecosystems, changes in pollen composition at one location may represent points along a successional trajectory, where each time point represents significant compositional turnover, but, relative to the surrounding, heterogeneous landscape, very little change in forest composition occurs.  Thus turnover as a single metric can provide results that are not uniquely tied to overall, landscape scale, changes in vegetation.
 
-In paleoecological analysis the use of squared chord dissimilarity (Overpeck, 1984) is a common measure of dissimilarity between two pollen assemblages, and is simply an extension of Euclidean distance between two points in space.  Here the 'space' is the multivariate pollen assemblage, which is square root transformed to reduce the influence of taxa, such as *Pinus* that tend to be over-represented in assemblages.  Each pollen assemblage represents regional and local vegetation surrounding the sample site, filtered through taphonomic processes (Jackson 2012?).  We can describe this dissimilarity from modern as the distance to the closest modern sample, $d_{mt}$.  Using $d_{m}$ we may then define 'non-analogue' communities as those which pass a certain threshold of minimum dissimilarity, here we use the 95 percentile of minimum distances.  A significant challenge to the use of modern dissimilarity measures is the fact that in many cases modern pollen reflects an anthropogenic alteration of the landscape relative to fossil assemblages.  The presence of taxa such as Ambrosia point to significant opening of woodland canopies in North America for example [REF].  This effect can impact our interpretations of the relationships between pollen and various other factors such as climate (St. Jacques, the new chinese one).
+In paleoecological analysis the use of squared chord dissimilarity [@overpeck1985quantitative] is a common measure of dissimilarity between two pollen assemblages, and is simply an extension of Euclidean distance between two points in space.  Here the 'space' is the multivariate pollen assemblage, which is square root transformed to reduce the influence of taxa, such as *Pinus* that tend to be over-represented in assemblages.  Each pollen assemblage represents regional and local vegetation surrounding the sample site, filtered through taphonomic processes [@jackson2012representation].  We can describe the dissimilarity of fossil pollen assemblages from modern as the distance to the closest modern sample, $d_{m}$.  Using $d_{m}$ we can then define 'no-analogue' communities as those which pass a certain threshold of minimum dissimilarity, here we use the 95 percentile of minimum distances.  A significant challenge to the use of modern dissimilarity measures is the fact that in many cases modern pollen reflects an anthropogenic alteration of the landscape relative to fossil assemblages [@kujawa2016pollen].  The presence of taxa such as Ambrosia point to significant opening of woodland canopies in North America for example [@grimm1984fire].  This effect can impact our interpretations of the relationships between pollen and various other factors such as climate (St. Jacques et al. (2008b, 2015)).
 
-A limitation of the use of dissimilarity from modern is that the dissimilarity of past pollen assemblages with respect to modern pollen cannot indicate changes from one community type to another through time, only dissimilarity from modern ecosystems.  While broad scale spatial changes may be visible, a site that transitions from prairie to forest can retain a similarly low $d_{mt}$ value, provided near analogues exist in the modern pollen data.  To correct for this, we can examine measures of turnover with a single pollen record through time $d_{st}$, or site dissimilarity at time $t$.  This measures dissimilarity from one sample in a pollen record to the next, more modern sample, with high values for $d_{t}$ indicating much higher rates of vegetation turnover within cores.  Schuman et al. (ref) showed patterns of high within-core turnover, but there is a further element of turnover or change that has not been explored.  Ladnscape turnover $d_{lt}$ represents the novelty of a community on the observable landscape at some timepoint $t$.  This landscape turnover estimate allows us to capture the movement of communities or broadly based vegetation types across the landscape.  We can imagine times in the past where site turnover may be high, but landscape turnover may be low, for example, the movement of boreal type ecosystems across North America following deglaciation may result in high site turnover, but low landscape turnover.
+A limitation of the use of dissimilarity from modern is that the dissimilarity of past pollen assemblages with respect to modern pollen cannot indicate changes from one community type to another through time, only dissimilarity from modern ecosystems.  While broad-scale spatial changes may be visible, a site that transitions from prairie to forest can retain a similarly low $d_{m}$ value, provided near-analogues exist in the modern pollen data.  To correct for this, we can examine measures of turnover with a single pollen record through time $d_{s}_{t}$, or site dissimilarity at time $t$.  This measures dissimilarity from one sample in a pollen record to the next, more modern sample, with high values for $d_{t}$ indicating much higher rates of vegetation turnover within cores.  Schuman et al. [-@shuman2005magnitudes] showed patterns of high within-core turnover, but there is a further element of turnover or change that has not been explored.  Ladnscape turnover $d_{l}_{t}$ represents the novelty of a community on the observable landscape at some timepoint $t$.  This landscape turnover estimate allows us to capture the movement of communities or broadly based vegetation types across the landscape.  We can imagine times in the past where site turnover ($d_{s}_{t}$) may be high, but landscape turnover ($d_{l}_{t}$) may be low, for example, the progression of *Pinus*-dominated ecosystems across in western North America following deglaciation [e.g., @macdonald1991post] may result in high site turnover, but low landscape turnover at the migration front.
 
 We can then imagine a set of scenarios, illustrated by plotting the various combinations of landscape and site level similarities.
 
