--- a/neotoma_bib.bib
+++ b/neotoma_bib.bib
@@ -1,7 +1,3 @@
-% This file was created with JabRef 2.10.
-% Encoding: Cp1252
-
-
 @Manual{grid2012,
   Title                    = {gridExtra: functions in {Grid} graphics},
   Author                   = {Baptiste Auguie},
@@ -308,7 +304,7 @@
 
 @article{kujawa2016pollen,
   title = {The effect of anthropogenic land cover change on pollen-vegetation relationships in the American Midwest},
-  author = {Kujawa, E and Goring, SJ and Dawson, A and Calcote, R and Grimm, EC and Hotchkiss, SC and Jackson, ST and Lynch, EA and McLachlan, J and St-Jacques, J-M and Umbanhowar, C, Jr. and Williams, JW}
+  author = {Kujawa, E and Goring, SJ and Dawson, A and Calcote, R and Grimm, EC and Hotchkiss, SC and Jackson, ST and Lynch, EA and McLachlan, J and St-Jacques, J-M and Umbanhowar, C, Jr. and Williams, JW},
   year = {accepted},
   journal = {Anthropocene}
 }
